--- a/src/main/resources/assets/snowdust/lang/en_us.json
+++ b/src/main/resources/assets/snowdust/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "item.snowdust.custom": "Item #1",
-  "item.snowdust.another_item": "Item #2"
+  "item.snowdust.another_item": "Item #2",
+  "block.snowdust.test_block": "Heisenberg"
 }
