--- a/src/main/resources/assets/snowdust/lang/en_us.json
+++ b/src/main/resources/assets/snowdust/lang/en_us.json
@@ -1,12 +1,20 @@
 {
   "item.snowdust.custom": "Item #1",
   "item.snowdust.another_item": "Item #2",
-  "item.snowdust.breath_of_winter": "Breath of winter",
-  "item.snowdust.ice_ingot": "Ice ingot",
-  "item.snowdust.ice_axe": "Ice axe",
-  "item.snowdust.true_ice": "True ice",
-  "item.snowdust.ice_stick": "Ice stick",
+  "item.snowdust.breath_of_winter": "Breath of the Winter",
+  "item.snowdust.ice_ingot": "Ice Ingot",
+  "item.snowdust.ice_axe": "Ice Axe",
+  "item.snowdust.true_ice": "True Ice",
+  "item.snowdust.ice_stick": "Ice Stick",
+  "item.snowdust.craunium":"Craunium",
+  "item.snowdust.snow_essence":"Snow Essence",
+
+  "item.snowdust.ice_helmet": "Ice Helmet",
+  "item.snowdust.ice_chestplate": "Ice Chestplate",
+  "item.snowdust.ice_leggins": "Ice Leggins",
+  "item.snowdust.ice_boots": "Ice Boots",
 
   "block.snowdust.test_block": "Heisenberg",
-  "block.snowdust.breakable_ice": "Breakable ice"
+  "block.snowdust.craunium_ore":"Craunium Ore",
+  "block.snowdust.breakable_ice": "Fragile Ice"
 }
