Add enchant for armour

--- a/src/main/resources/assets/snowdust/lang/en_us.json
+++ b/src/main/resources/assets/snowdust/lang/en_us.json
@@ -7,6 +7,8 @@
   "item.snowdust.craunium":"Craunium",
   "item.snowdust.snow_essence":"Snow Essence",
 
+  "enchantment.snowdust.ice_rejection": "Ice Rejection",
+
   "item.snowdust.ice_helmet": "Ice Helmet",
   "item.snowdust.ice_chestplate": "Ice Chestplate",
   "item.snowdust.ice_leggins": "Ice Leggins",
