Add Old House, Tombs and Swamp Dungeon structures

--- a/src/main/resources/assets/snowdust/lang/lol_us.json
+++ b/src/main/resources/assets/snowdust/lang/lol_us.json
@@ -1,10 +1,10 @@
 {
-  "item.snowdust.breath_of_winter": "Breath of the Winter",
+  "item.snowdust.breath_of_winter": "bottle wif blu cloudz",
   "item.snowdust.craunium_ingot": "Craunium Ingot",
-  "item.snowdust.ice_axe": "Ice Axe",
+  "item.snowdust.ice_axe": "frozen water chopper",
   "item.snowdust.true_ice": "True Ice",
   "item.snowdust.ice_stick": "Ice Stick",
-  "item.snowdust.craunium": "Craunium",
+  "item.snowdust.craunium": "spiky shineh blu stuff",
   "item.snowdust.snow_essence":"Snow Essence",
   "item.snowdust.soul_sickle": "Soul Sickle",
   "item.snowdust.desert_stick": "Desert Stick",
